# if on linux just find lib at runtime
IF(WIN32)
    find_package(sndfile REQUIRED)
    find_package(portaudio REQUIRED)
    set(SNDFILE_LIB_NAME SndFile::sndfile)
    set(PORTAUDIO_LIB_NAME portaudio_static)
ELSE()
	find_package(sndfile QUIET)	
	if(NOT sndfile_FOUND)
  	       message(WARNING "unable to find sndfile, it will be found at build time if it is installed, or you can set sndfile_DIR=path/to/sndfile/cmake/folder")
	endif()	
	find_package(portaudio QUIET)
	if(NOT portaudio_FOUND)
	       message(WARNING "unable to find portaudio, it will be found at buildtime if it is installed, or you can set portaudio_DIR=path/to/portaudio/cmake/folder")
	endif()
	set(SNDFILE_LIB_NAME sndfile)
	set(PORTAUDIO_LIB_NAME portaudio)
ENDIF()

add_library(audio audio.cpp)

target_include_directories(audio PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../include/")
target_link_libraries(audio PRIVATE ${SNDFILE_LIB_NAME} ${PORTAUDIO_LIB_NAME})
